# rspi-api

./: .gitignore  Cargo.toml  Makefile  dockerfile
src/: main.rs
src/config/: cors.rs  database.rs  dotenv.rs  mod.rs
src/controllers/: auth.rs  counter.rs  mod.rs  raspi.rs
src/dtos/: auth.rs  counter.rs  global.rs  mod.rs  raspi.rs
src/dtos/errors/: global.rs
src/dtos/requests/: auth.rs  counter.rs  mod.rs
src/dtos/responses/: auth.rs  counter.rs  mod.rs  raspi.rs
src/middleware/: authentication.rs
src/models/: activity.rs  auth.rs  counter.rs  mod.rs  point.rs  points.rs  system.rs  user.rs
src/routes/: auth.rs  counter.rs  health_checker.rs  mod.rs  raspi.rs
src/utils/: string.rs
